(Christian)

I hope this fixes the segfault that Technoir reported.


-------------------------------------------------------------------------------

Tue Sep 14 17:06:08 PDT 1999
(Raster)

ok - go make desktop windows off the screen.... :)

-------------------------------------------------------------------------------

Tue Sep 14 18:55:40 PDT 1999
(Raster)

and double check that ewins didnt go missing whilst we were dragging them
in the pager

-------------------------------------------------------------------------------

Wed Sep 15 09:34:16 PDT 1999
(Raster)

fixe over sealous ewin existance catching.. 

-------------------------------------------------------------------------------

Wed Sep 15 10:46:01 PDT 1999
(Raster)

get rid of cruft in all settigns boxes - make them smaller so they fit on 
6480x480 screens 

-------------------------------------------------------------------------------

Wed Sep 15 15:40:07 PDT 1999
(Mandrake)

KDE part four thousand eight hundred and two.
no more KDE kpanel segfaults.
the taskbar and the desktop pager still don't have names in them, and E for
some reason isn't triggering update events.  but we'll fix that soon enough.
here's another taste of the kde support though.

-------------------------------------------------------------------------------

Wed Sep 15 19:09:52 PDT 1999
(Mandrake)

syncing kde code

-------------------------------------------------------------------------------

Thu Sep 16 12:04:54 PDT 1999
(Raster)

added patch to fix some behavior of raiselower

fixed pager starting up shaded problem

fixed iconfiicaton of thing son other desktops problem

-------------------------------------------------------------------------------

Thu Sep 16 16:33:08 EDT 1999
(Christian)

Don't snapshot group borders.


-------------------------------------------------------------------------------

Thu Sep 16 13:59:43 PDT 1999
(Raster)

fix speed fo menu sliding/scrolling and cleanup sliding/scrolling.