@@ -2251,6 +2251,7 @@ void                KDE_PrepModuleEvent(Window win, KMessage msg);
 void                KDE_CheckClientHints(Window win);
 void                KDE_HintChange(Atom a);
 void                KDE_SetRootArea(void);
+void                KDE_UpdateFocusedWindow(void);
 
 /* sound.c functions */
 Sample             *LoadWav(char *file);
